--- a/src/variables/themes/_dark.scss
+++ b/src/variables/themes/_dark.scss
@@ -48,6 +48,7 @@
   --tk-list-hover-color: #{$scolor-graphite};
   --tk-list-selected-color: #{$scolor-graphite-minus-88};
   --tk-list-divider-color: #{$scolor-graphite-minus-24};
+  --tk-list-disabled-color: #{$scolor-graphite-minus-24};
   --tk-list-tag-color: #{$scolor-graphite-minus-21};
   --tk-tag-border-and-group-heading-color: #{$scolor-graphite-minus-72};
   --tk-tag-border-disabled-color: #{$scolor-graphite-minus-48};
