--- a/src/variables/themes/accessors/colors/_index.scss
+++ b/src/variables/themes/accessors/colors/_index.scss
@@ -86,6 +86,7 @@ $--tk-select-background-color: var(--tk-select-background-color, $scolor-white);
 $--tk-list-hover-color: var(--tk-list-hover-color, $scolor-graphite-minus-88);
 $--tk-list-selected-color: var(--tk-list-selected-color, $scolor-graphite-minus-24);
 $--tk-list-divider-color: var(--tk-list-divider-color, $scolor-graphite-minus-88);
+$--tk-list-disabled-color: var(--tk-list-disabled-color, $scolor-graphite-minus-48);
 $--tk-list-tag-color: var(--tk-list-tag-color, $scolor-graphite-minus-89);
 $--tk-tag-border-and-group-heading-color: var(--tk-tag-border-and-group-heading-color, $scolor-graphite-minus-24);
 $--tk-tag-background-color: var(--tk-tag-background-color, $scolor-graphite-minus-88);
